; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_trs.c_trust_compat.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_trs.c_trust_compat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@X509_TRUST_NO_SS_COMPAT = common dso_local global i32 0, align 4
@EXFLAG_SS = common dso_local global i32 0, align 4
@X509_TRUST_TRUSTED = common dso_local global i32 0, align 4
@X509_TRUST_UNTRUSTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_4__*, i32)* @trust_compat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @trust_compat(i32* %0, %struct.TYPE_4__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %9 = call i32 @X509_check_purpose(%struct.TYPE_4__* %8, i32 -1, i32 0)
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* @X509_TRUST_NO_SS_COMPAT, align 4
  %12 = and i32 %10, %11
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %3
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @EXFLAG_SS, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %14
  %22 = load i32, i32* @X509_TRUST_TRUSTED, align 4
  store i32 %22, i32* %4, align 4
  br label %25

23:                                               ; preds = %14, %3
  %24 = load i32, i32* @X509_TRUST_UNTRUSTED, align 4
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %23, %21
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @X509_check_purpose(%struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
